Sua giao dien va them tinh nang tra cuu cach xung ho

--- a/App/Views/GiaPha/gia_pha_dung.html
+++ b/App/Views/GiaPha/gia_pha_dung.html
@@ -78,7 +78,7 @@ Gia phả dạng đứng
                     </div>
                     <div class="x_content">
                         <div class="multi-level card">
-                            {{inGiaPhaDangDung()}}
+                            {{inGiaPhaDangDung(null)}}
                             <!-- Do qua trinh in cay gia pha bi thieu nen them 2 them </div>-->
                         </div>
                     </div>
