--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -37,7 +37,7 @@
         <div class="col-md-3 left_col">
             <div class="left_col scroll-view">
                 <div class="navbar nav_title" style="border: 0;">
-                    <a href="/trangchu/index" class="site_title"><i class="fa fa-tree"></i> <span>Gia Phả Online</span></a>
+                    <a href="/trangchu/index" class="site_title"><img src="/images/PA1057_gia-pha.png" alt="logo" style="width: 50px"><span> Gia Phả Online</span></a>
                 </div>
 
                 <div class="clearfix"></div>
@@ -56,7 +56,7 @@
                         <h2>{{ current_user.name }}</h2>
                     </div>
                     {% else %}
-                    <a href="/signup/new">Đăng ký</a> hoặc <a href="/login">Đăng nhập</a>.
+                    <a href="/login#signup">Đăng ký</a> hoặc <a href="/login">Đăng nhập</a>.
                     {% endif %}
                     <div class="clearfix"></div>
                 </div>
@@ -79,7 +79,7 @@
                                 <ul class="nav child_menu">
                                     <li><a href="/giapha/giaPhaDangDung"><i class="fa fa-list-ol" aria-hidden="true"></i>Dạng đứng</a></li>
                                     <li><a href="/giapha/index"><i class="fa fa-sitemap" aria-hidden="true"></i>Dạng cây</a></li>
-                                    <li><a href="profile.html"><i class="fa fa-handshake-o" aria-hidden="true"></i>Tra cứu cách xưng hô</a></li>
+                                    <li><a href="/tra-cuu-xung-ho"><i class="fa fa-handshake-o" aria-hidden="true"></i>Tra cứu cách xưng hô</a></li>
                                 </ul>
                             </li>
                             <li><a><i class="fa fa-users" aria-hidden="true"></i></i> Thành viên <span class="fa fa-chevron-down"></span></a>
@@ -115,18 +115,19 @@
                             <li><a><i class="fa fa-sitemap"></i> Xem theo đời <span
                                     class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="#level1_1">Level One</a>
-                                    <li><a>Level One<span class="fa fa-chevron-down"></span></a>
-                                        <ul class="nav child_menu">
-                                            <li class="sub_menu"><a href="level2.html">Level Two</a>
-                                            </li>
-                                            <li><a href="#level2_1">Level Two</a>
-                                            </li>
-                                            <li><a href="#level2_2">Level Two</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#level1_2">Level One</a>
+
+                                    <!--<li><a>Level One<span class="fa fa-chevron-down"></span></a>-->
+                                        <!--<ul class="nav child_menu">-->
+                                            <!--<li class="sub_menu"><a href="level2.html">Level Two</a>-->
+                                            <!--</li>-->
+                                            <!--<li><a href="#level2_1">Level Two</a>-->
+                                            <!--</li>-->
+                                            <!--<li><a href="#level2_2">Level Two</a>-->
+                                            <!--</li>-->
+                                        <!--</ul>-->
+                                    <!--</li>-->
+                                    <li><a href="/giapha/phadochi/7">Chi 7</a>
+                                    <li><a href="/giapha/phadochi/8">Chi 8</a>
                                     </li>
                                 </ul>
                             </li>
