--- a/App/Views/User/PhaDo/pha_do_dung.html
+++ b/App/Views/User/PhaDo/pha_do_dung.html
@@ -1,64 +1,9 @@
 {% extends "base_user.html" %}
 {% block title %}
-Trang chủ
+Phả đồ
 {% endblock %}
 {% block css %}
-<link href="/css/styles.css" rel="stylesheet">
-<style>
-    .dropbtn {
-        /*color: white;*/
-        border: none;
-        cursor: pointer;
-    }
-
-    /* The container <div> - needed to position the dropdown content */
-    .dropdown {
-        position: relative;
-        /*display: inline-block;*/
-    }
-
-    /* Dropdown Content (Hidden by Default) */
-    .dropdown-content {
-        display: none;
-        position: absolute;
-        background-color: #f9f9f9;
-        min-width: 160px;
-        top: 2em;
-        left: 199px;
-        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-        z-index: 9999;
-    }
-
-    /* Links inside the dropdown */
-    .dropdown-content a {
-        color: black;
-        text-decoration: none;
-        display: block;
-        padding: 0 0 0 1.5em !important;
-        line-height: 50px;
-        margin: 0;
-        padding: 0 4em;
-        list-style: none;
-        text-decoration: none;
-        color: #90A4AE;
-        font-weight: 100;
-
-    }
-
-    /* Change color of dropdown links on hover */
-    .dropdown-content a:hover {
-        background-color: #f1f1f1
-    }
-
-    /* Show the dropdown menu on hover */
-    .dropdown:hover .dropdown-content {
-        display: block;
-    }
-
-    /* Change the background color of the dropdown button when the dropdown content is shown */
-    .dropdown:hover .dropbtn {
-    }
-</style>
+<link href="/css/treemenu.css" rel="stylesheet">
 {% endblock %}
 {% block body %}
 <section class="content clearfix">
@@ -76,10 +21,11 @@ Trang chủ
                 <input type="button" value="Tìm kiếm">
             </div>
         </div>
-        <div class="multi-level" style="padding-bottom: 10em">
-            <h5>Phả đồ dạng đứng</h5>
-            {{inGiaPhaDangDung()}}
+        <div class="floating-tree">
+            {{giaPhaNguoiDung()}}
         </div>
     </div>
 </section>
+{% endblock %}
+{% block footer %}
 {% endblock %}
